--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<path d="M 148, 400 C 561, 48, 517, 453, 679, 400Z" fill="rgb(59, 128, 53)"></path>
 			<path d="M 0, 400 C 330, 135, 516, 568, 702, 400Z" fill="rgb(90, 158, 82)"></path>
 		</svg>
-		<canvas id="canvas" width = "600" height = "400"></canvas>
+		<canvas id="canvas" width = "600" height = "400" tabindex = "0"></canvas>
 		<script src = "script.js"></script>
 	</body>
 </html>
